[gd_scene load_steps=7 format=3 uid="uid://cjo6dm2i2wimp"]

[ext_resource type="Script" path="res://scenes/theduck/duck.gd" id="1_puulf"]
[ext_resource type="Texture2D" uid="uid://ceuqb0n7vcwdo" path="res://assets/images/theduck/duck.png" id="2_rsaim"]

[sub_resource type="Animation" id="Animation_52nqx"]
resource_name = "DIE"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_dr8r5"]
resource_name = "fly"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bkjrg"]
_data = {
"DIE": SubResource("Animation_52nqx"),
"fly": SubResource("Animation_dr8r5")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0c0jg"]
size = Vector2(32, 26)

[node name="Duck" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_puulf")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_rsaim")
hframes = 3
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
autoplay = "fly"
libraries = {
"": SubResource("AnimationLibrary_bkjrg")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_0c0jg")

[node name="Horizontal" type="Node2D" parent="."]

[node name="West" type="RayCast2D" parent="Horizontal"]
position = Vector2(0, 2)
rotation = 1.5708
enabled = false
target_position = Vector2(0, 20)
collision_mask = 8
collide_with_areas = true

[node name="East" type="RayCast2D" parent="Horizontal"]
position = Vector2(0, 2)
rotation = -1.5708
enabled = false
target_position = Vector2(0, 20)
collision_mask = 8
collide_with_areas = true

[node name="Vertical" type="Node2D" parent="."]

[node name="North" type="RayCast2D" parent="Vertical"]
position = Vector2(0, 2)
rotation = -3.14159
enabled = false
target_position = Vector2(0, 20)
collision_mask = 16
collide_with_areas = true

[node name="South" type="RayCast2D" parent="Vertical"]
position = Vector2(0, 2)
enabled = false
target_position = Vector2(0, 20)
collision_mask = 16
collide_with_areas = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_0c0jg")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 14.0
offset_top = 3.0
offset_right = 54.0
offset_bottom = 29.0
text = "0"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
